2012-10-04  Christoph Redl  <redl@kr.tuwien.ac.at>

	* AggregatePlugin.cpp: Implement a simplification strategy for
	aggregates
	* AggregatePluginh: Likewise.
	* GringoGrounder.cpp: Add genuine support for aggregates
	(no translation to external atoms needed).
	* ClaspSolver.cpp: Add support for weight rules
	(used for aggregate implementation).
	* ClaspSolver.h: Likewise.
	* Rule.h: Add support for lparse weight rules.
	* ID.h: Likewise.

2012-09-30  Christoph Redl  <redl@kr.tuwien.ac.at>

	* UnfoundedSetChecker.cpp: Enable new assumption-based UFS checker
	* UnfoundedSetChecker.h: Likewise.
	* dlvhex.cpp: Likewise.

2012-09-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* bootstrap-extra.sh: Downloading gringo and clasp tarballs to ship them with dlvhex source.
	* configure.ac: Unpacking and building gringo and clasp within dlvhex to make them easier to use.
	* build_potassco.sh: Likewise.
	* buildclaspgringo/Makefile.am: Likewise.
	* buildclaspgringo/gringo-clang.patch: Copying patch for gringo for clang from
	https://potassco.svn.sourceforge.net/svnroot/potassco/tags/gringo-3.0.4/patches/patch-clang.diff

2012-09-03  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/State.cpp: Added possibility to repeat evaluation.
	* src/dlvhex.cpp: Likewise.
	* examples/tests/basic.test.in: Likewise.
	* examples/tests/testrepetition.stdout: Likewise.
	* testsuite/TestPlugin.cpp: Likewise.

2012-08-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* examples/Makefile.am: fixing make distcheck

2012-08-10 Christoph Redl   <redl@kr.tuwien.ac.at>

	* WeakConstraintPlugin.h: Implement weak constraints as plugin
	(internal)
	* WeakConstraintPlugin.cpp: Likewise

2012-08-10  Peter Schueller  <ps@kr.tuwien.ac.at>

	* generator/: renamed to mlp-generator/ as this directory is only
	relevant for MLPs.
	* mlp-generator/: Likewise.

	* src/ResultContainer.cpp: Removing deprecated file.

2012-08-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Update libclingo version.
