@@ -1,8 +1,8 @@
-int(0). int(1). int(2). int(3). int(4). int(5). int(6). int(7). int(8). int(9). int(10).
+#maxint=10.
 
 str(a).
 str(b).
 filter(bx).
 
-counter(Z) :- #count { X,Y : &testConcat[X,x](Y), str(X), not filter(Y) } = Z, int(Z).
+counter(Z) :- #count { X,Y : &testConcat[X,x](Y), str(X), not filter(Y) } = Z, #int(Z).
 
